# pyComputeFarm

./: .gitignore  .pdm.toml  Readme.md  ToDo.md  ansible.cfg  pyproject.toml
archive/files/: Readme.md
archive/plays/: startComputeFarm
archive/tasks/: configureComputeFarm
doc/: CrossCompilers.md  Readme.md
files/cf/: newTask  taskManager  worker
files/tests/: runner  runnerConfig.yaml  testExceptions
plays/: configureComputeFarm  loadSshKey  startComputeFarm  stopComputeFarm
rcf/: __init__.py  cli.py  computeFarmTools.py  config.py  cryption.py  roles.py  run.py  sar.py  setup.py  templates.py
rcf/roleResources/: __init__.py
rcf/roleResources/allWorkers/: __init__.py  monitor  monitor.py  monitor.service.j2  tasks.yaml  worker  worker.py
rcf/roleResources/contextWorker/: __init__.py  contextConfig.yaml.j2  contextLogParser.py.j2  contextWorker.service.j2  contextWorker.target.j2  tasks.yaml
rcf/roleResources/gccARMCrossX86Worker/: __init__.py  gccARMCrossX86-Config.yaml.j2  gccARMCrossX86-LogParser.py.j2  gccARMCrossX86-Worker.service.j2  gccARMCrossX86-Worker.target.j2  tasks.yaml
rcf/roleResources/gccARMWorker/: __init__.py  gccARM-Config.yaml.j2  gccARM-Worker.service.j2  gccARM-Worker.target.j2  tasks.yaml
rcf/roleResources/gccCommon/: __init__.py  gcc-Config-linux-aarch64.j2  gcc-Config-linux-x86_64.j2  gcc-LogParser.py.j2
rcf/roleResources/gccWorker/: gcc-Config-linux-aarch64.yaml.j2  gcc-Config-linux-x86_64.yaml.j2  (+4 more)
rcf/roles/: tasks.yaml
scripts/: docWebServer  installEditableRcfCommand
tasks/: startComputeFarm  stopComputeFarm
(+79 files in other folders)
